test/compile_errors/err_unused_task.w
//! expect-error: a bound Task handle is not detached

async fn compute() -> i32:
    42

async fn main:
    let task = compute()
    task
    let x = 1
